Handle record ties